User-visible changes in version 0.4.1:

* two independent auxiliary plots (by default one is visible)
* implemented s.guess command that adjusts existing peak - also in peak pop-up 
  menu (based on patch sent by Jonathan Hunt)
* config file can store info, what windows are visible (see GUI->Show)

User-visible changes in version 0.4.0:

* multiple datasets in one plot
* multiple plots - all can be fitted simultanously
* New menu items - GUI->Show->..., GUI->Scroll...

User-visible changes in version 0.3.4:

* enhanced peak dragging
* commands from ${HOME}/.fityk/init are executed on start-up
* added Data->Recent files->... to menu
* minor fixes

User-visible changes in version 0.3.3:

* Major changes in graphical interface (mouse usage, toolbar etc.)
* Added support for Siemens .raw data file format (Stefan Krumm) 

User-visible changes in version 0.3.2:

* Voigt function  
* File->Re-Include menu item
* File->Print Setup menu item
* Zoom All menu item added to main plot popup menu
* Zooming with left mouse button in normal mode 
* Auto-scaling auxiliary plot when changing type of the plot
* Exporting peak parameters (Sum->Export or s.export)
* Sum/Data Export: optionally appending to a file, instead of overwritting 
* Minor changes and bug fixes

User-visible changes in version 0.3.1:

* Saving GUI configuration to file (Unix) or registry (Windows)
* s.export ---> XFIT format 
* d.load ---> CPI format
* Minor bug fixes
* Minor changes in documentation (XSLT stylesheet for generating command and option indices)
* fityk.spec for creating RPMs
* Windows installer (produced with InnoSetup) 
* Using HtmlHelp (*.chm) manual format in Windows version
