@@ -1,3 +1,4 @@
+# $Id$
 
 EXTRA_DIST = fityk.spec fityk.iss fityk.url 
 AUTOMAKE_OPTIONS = dist-zip dist-bzip2
