@@ -1,14 +1,15 @@
 [Suggestions from Fityk users survey are not included here yet.]
 
+* data viewer (grid); 
+
+* document source with Doxygen [IMPORTANT]  
+
 * document s.guess command 
 
 * problem: fityk can't be compiled with UNICODE-enabled wxWidgets
 
 * problem: problem with locales, that has decimal point different than '.' 
   as a workaround, run:  bash$ LC_NUMERIC=en_US fityk
-
-* problem: ambigous 'log' in "export as function" (in gnuplot it means
-  natural, in Excel log=log10). 
 
 * --debug / --release configure flag, equivalent to: -g -fno-inline 
   / -O3 -s -DNDEBUG 
@@ -26,10 +27,7 @@
       d.transform S = sqrt(max(1,y[n]))      -> will set std. dev.
       d.transform x=y & y=x                  -> will swap x and y axes 
 
-* data viewer (grid); GUI for d.transform command 
-
-* write (and verify) program version in scripts; write version/date in config 
-  files 
+* GUI for d.transform command 
 
 * problem: "exit" command in script. What should it do? 
   The same about warning/error, when 'exit-on-error=1' is set
@@ -57,8 +55,6 @@
 
 * rewrite scanner/parser using boost::spirit. Now it uses flex/bison.
   [IMPORTANT]
-
-* document source with Doxygen [IMPORTANT]  
 
 * user defined functions; it includes symbolic computing of derivatives.
   Important but needs a lot of work. Perhaps the idea of simple parameters,
