@@ -1,3 +1,4 @@
+# $Id$
 
 EXTRA_DIST = nacl01.fit  nacl01.dat  \
 	     SiC_Zn.fit SiC_Zn.dat  \
