@@ -83,9 +83,6 @@ RCSID ("$Id$")
 #include "img/mouse_l.xpm"
 #include "img/mouse_r.xpm"
 
-#ifndef VERSION
-#   define VERSION "unknown"
-#endif
 
 char* app_name = "fityk"; 
 char* about_html = 
@@ -277,7 +274,7 @@ bool FApp::OnInit(void)
     my_IO = &my_gui_IO;
 
     if (read_bool_from_config(wxConfig::Get(), "/TipOfTheDay/ShowAtStartup", 
-                              false)) {
+                              true)) {
         frame->OnTipOfTheDay(dummy_cmd_event);
     }
 
@@ -287,6 +284,7 @@ bool FApp::OnInit(void)
 int FApp::OnExit()
 { 
     delete AL; 
+    wxConfig::Get()->Write("/FitykVersion", VERSION);
     delete wxConfigBase::Set((wxConfigBase *) NULL);
     return 0;
 }
@@ -539,6 +537,7 @@ void FFrame::read_settings(wxConfigBase *cf)
 
 void FFrame::save_all_settings(wxConfigBase *cf) const
 {
+    cf->Write("/FitykVersion", VERSION);
     save_settings(cf);
     plot_pane->save_settings(cf);
     io_pane->save_settings(cf);
@@ -1534,12 +1533,15 @@ const char input_prompt[] = "=-> ";
 
 void exec_command (const string& s)
 {
-    //TODO const int max_lines_in_output_win = 1000;
+    //FIXME should I limit number of displayed lines?
+    //const int max_lines_in_output_win = 1000;
     string out_s = input_prompt + s + "\n";
-    if (!strncmp(s.c_str(), "o.plot", 6))
-        frame->SetStatusText((input_prompt + s).c_str());
-    else
+    //don't output o.plot command - it is generated by every zoom in/out etc.
+    bool output = strncmp(s.c_str(), "o.plot", 6) == 0;
+    if (output)
         frame->output_text(out_s.c_str(), os_ty_input);
+    else
+        frame->SetStatusText((input_prompt + s).c_str());
     wxBusyCursor wait;
     bool r = parser(s);
     if (!r)
